Added userType field to user form

--- a/Source code/proyectoFinal/templates/users/listUsers.html
+++ b/Source code/proyectoFinal/templates/users/listUsers.html
@@ -16,6 +16,7 @@
 			<li><b> Contraseña: </b>{{user.password}} </li>
 			<li><b> Ciudad: </b> {{user.city.name}} </li>
 			<li><b> Telefono: </b> {{user.telephone.number}} </li>
+			<li><b> Tipo de Usuario: </b> {{user.userType}} </li>
 			<button><a href="/update">Editar</a></button>
 			<br><br>
 		{% endfor %}
