--- a/Source code/proyectoFinal/templates/users/listUsers.html
+++ b/Source code/proyectoFinal/templates/users/listUsers.html
@@ -16,8 +16,8 @@
 			<li><b> Contraseña: </b>{{user.password}} </li>
 			<li><b> Ciudad: </b> {{user.city.name}} </li>
 			<li><b> Telefono: </b> {{user.telephone.number}} </li>
-			<li><b> Tipo de Usuario: </b> {{user.userType}} </li>
-			<button><a href="/update">Editar</a></button>
+			<li><b> Tipo de Usuario: </b> {{user.get_userType_display}} </li> <!-- Para mostrar el nombre completo, no la abreviacion de la base de datos -->
+			<button><a href="/update_user/1">Editar</a></button>
 			<br><br>
 		{% endfor %}
 	</ul>
