--- a/Source code/proyectoFinal/templates/courts/listCourts.html
+++ b/Source code/proyectoFinal/templates/courts/listCourts.html
@@ -8,13 +8,12 @@
 	<h1>CANCHAS REGISTRADAS</h1>
 
 	<ul>
-		{% for court in courts %} <!-- users -> Nombre de la lista especificado en views.py -->
+		{% for court in courts %}
 			<li><b> N° de cancha: </b> {{court.id}} </li>
 			<li><b> Luz artificial: </b> {{court.artificial_light|yesno:"Si,No"}} </li>
-			<li><b> Tipo de piso: </b> {{court.get_lawnType_display|yesno:"Si,No"}} </li> 
+			<li><b> Tipo de piso: </b> {{court.get_lawnType_display}} </li> 
 			<li><b> Tipo de cancha: </b> {{court.get_soccerType_display|yesno:"Si,No"}} </li> 
 			<li><b> Complejo: </b> {{court.complejo.name}} </li>
-			<!-- Para mostrar el nombre completo, no la abreviacion de la base de datos -->
 			<button><a href="#">Editar</a></button>
 			<br><br>
 		{% endfor %}
