--- a/Source code/proyectoFinal/templates/tournaments/searchTournament.html
+++ b/Source code/proyectoFinal/templates/tournaments/searchTournament.html
@@ -26,6 +26,7 @@
             {% for team in tournament.teams.all %}
               <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ team.name|escape }}</p>
             {% endfor %}
+        <p> <b>Fixture: </b>{{ tournament.fixture|escape }}</p>
             <br><br>
       {% endfor %}
       </ul>
