--- a/Source code/proyectoFinal/templates/users/searchUser.html
+++ b/Source code/proyectoFinal/templates/users/searchUser.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
 <head>
-    <title>Buscar equipos</title>
+    <title>Buscar jugadores</title>
     <meta charset="utf-8">
     
 </head>
 <body>
-  <h1 >BUSCAR EQUIPOS</h1>
+  <h1 >BUSCAR JUGADORES</h1>
   <form action="" method="GET">
     
     	<label for="q">Buscar: </label>
