--- a/Source code/proyectoFinal/templates/complexes/listComplexes.html
+++ b/Source code/proyectoFinal/templates/complexes/listComplexes.html
@@ -14,7 +14,7 @@
 			<li><b> Asador: </b> {{complex.roaster|yesno:"Si,No"}} </li>
 			<li><b> Cantina: </b> {{complex.buffet|yesno:"Si,No"}} </li>
 			<li><b> Vestuarios: </b>{{complex.lockerRoom|yesno:"Si,No"}} </li>
-			<li><b> Dueño: </b> {{complex.user.firstname}} </li>
+			<li><b> Dueño: </b> {{complex.user.get_full_name}} </li>
 			
 			<button><a href="/update_user/1">Editar</a></button>
 			<br><br>
