--- a/Source code/proyectoFinal/templates/fixtures/fixture_form.html
+++ b/Source code/proyectoFinal/templates/fixtures/fixture_form.html
@@ -1,7 +1,12 @@
 <title>New Fixture</title>
-<h1>NUEVO FITURE</h1>
+{% if user.is_staff %}
+<h1>NUEVO FIXTURE</h1>
 
 <form action="" method="post">{% csrf_token %}
      {{ form.as_p }} 
     <input type="submit" value="Crear" />
 </form>
+{% else %}
+<h1>PERMISO DENEGADO</h1>
+{% endif %}
+
