--- a/Source code/proyectoFinal/templates/teams/listTeams.html
+++ b/Source code/proyectoFinal/templates/teams/listTeams.html
@@ -11,10 +11,10 @@
 		{% for team in teams %} <!-- teams -> Nombre de la lista especificado en views.py -->
 			<li><b> Nombre del equipo: </b> {{team.name}} </li>
 			<br>
-			<li><b> Capitán: </b> {{team.captain}} </li>
+			<li><b> Capitán: </b> {{team.captain.get_full_name}} </li>
         	<br>
         	{% for p in team.players.all %}
-        		<li><b>Jugador: </b> {{p}} </li> <!-- team.players.all returns all the players from each team -->
+        		<li><b>Jugador: </b> {{p.get_full_name}} </li> <!-- team.players.all returns all the players from each team -->
         	{% endfor %}
 			<button><a href="/updateteam/2">Editar</a></button>
 			<br><br>
