--- a/Source code/proyectoFinal/templates/reservations/reservation_confirm_delete.html
+++ b/Source code/proyectoFinal/templates/reservations/reservation_confirm_delete.html
@@ -2,6 +2,6 @@
 <h1>CANCELAR RESERVA</h1>
 <form action="" method="post">{% csrf_token %}
     <p>¿ Esta seguro que quiere cancelar la reserva del dia <b>{{reservation.date}}</b> 
-    	de la hora <b>{{reservation.hour}}:{{reservation.minutes}}</b> ?</p>
+    	de la hora <b>{{reservation.hour}}:{{reservation.minutes}}</b>,correspondiente a <b>{{reservation.user.get_full_name}}</b> ?</p>
     <input type="submit" value="Cancelar" />
 </form>
