last changes in navigable version

--- a/Source code/proyectoFinal/templates/complexes/listComplexes.html
+++ b/Source code/proyectoFinal/templates/complexes/listComplexes.html
@@ -16,7 +16,7 @@
 			<li><b> Vestuarios: </b>{{complex.lockerRoom|yesno:"Si,No"}} </li>
 			<li><b> Dueño: </b> {{complex.user.get_full_name}} </li>
 			
-			<button><a href="/update_user/1">Editar</a></button>
+			<a href="/updatecomplexes"><button>Editar</button></a>
 			<br><br>
 		{% endfor %}
 	</ul>
