--- a/Source code/proyectoFinal/templates/fixtures/fixture_confirm_delete.html
+++ b/Source code/proyectoFinal/templates/fixtures/fixture_confirm_delete.html
@@ -1,6 +1,6 @@
 <title>Delete Fixture</title>
 <h1>ELIMINAR FIXTURE</h1>
 <form action="" method="post">{% csrf_token %}
-    <p>¿ Esta seguro que quiere eliminar el fixture del dia <b>{{match.date}}</b> ?</p>
+    <p>¿ Esta seguro que quiere eliminar el fixture <b>{{fixture.name}}</b> del dia <b>{{fixture.date}}</b> ?</p>
     <input type="submit" value="Eliminar" />
 </form>
