--- a/Source code/proyectoFinal/templates/tournaments/listTournaments.html
+++ b/Source code/proyectoFinal/templates/tournaments/listTournaments.html
@@ -16,7 +16,7 @@
         		<p>&nbsp;&nbsp;&nbsp;&nbsp; {{team}}</p><!-- tournament.teams.all returns all the teams from each tournament -->
         	{% endfor %}
 			<li><b> Complejo Organizador: </b> {{tournament.complex}} </li>
-			<li><b> Fixture asociado: </b> {{tournament.fixture}} </li>
+			<!--<li><b> Fixture asociado: </b> {{tournament.fixture}} </li>-->
 			<br><br>
 		{% endfor %}
 	</ul>
