--- a/Source code/proyectoFinal/templates/teams/team_form.html
+++ b/Source code/proyectoFinal/templates/teams/team_form.html
@@ -1,8 +1,12 @@
 <title>Crear Equipo</title>
 <h1>CREAR EQUIPO</h1>
+{% if not user.is_staff %}
 <h4>Atención, si usted crea un nuevo equipo será asignado como capitán del mismo.</h4>
 <h4>Si así lo desea, por favor complete los campos solicitados.</h4>
 <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Create" />
 </form>
+{% else %}
+<h1>PERMISO DENEGADO</h1>
+{% endif %}
