--- a/Source code/proyectoFinal/templates/tournaments/tournament_confirm_delete.html
+++ b/Source code/proyectoFinal/templates/tournaments/tournament_confirm_delete.html
@@ -1,6 +1,6 @@
 <title>Cancelar Torneo</title>
 <h1>CANCELAR TORNEO</h1>
 <form action="" method="post">{% csrf_token %}
-    <p>¿ Esta seguro que quiere cancelar el torneo perteneciente al complejo <b>{{tournament.complex}}</b> </b> ?</p>
+    <p>¿ Esta seguro que quiere cancelar el torneo perteneciente al complejo <b>{{tournament.complex}}</b>?</p>
     <input type="submit" value="Estoy seguro" />
 </form>
