--- a/Source code/proyectoFinal/templates/courts/listCourts.html
+++ b/Source code/proyectoFinal/templates/courts/listCourts.html
@@ -6,7 +6,7 @@
 </head>
 <body>	
 	<h1>CANCHAS REGISTRADAS</h1>
-
+	{% if courts %}
 	<ul>
 		{% for court in courts %}
 			<li><b> N° de cancha: </b> {{court.id}} </li>
@@ -18,4 +18,7 @@
 			<br><br>
 		{% endfor %}
 	</ul>
+	{% else %}
+		<p>No hay canchas que visualizar</p>
+	{% endif %}
 </body>
