--- a/Source code/proyectoFinal/templates/playersinfo/playersinfo_update_form.html
+++ b/Source code/proyectoFinal/templates/playersinfo/playersinfo_update_form.html
@@ -1,7 +1,7 @@
 <title>Actualizar informacion de jugador</title>
 <h1>ACTUALIZAR INFORMACION DE JUGADOR</h1>
 <form action="" method="post">{% csrf_token %}
-	Nombre: {{playersinfo.user}}
+	Nombre: {{playersinfo.user.firstname}}
     {{ form.as_p }}
     <br><br>
     <input type="submit" value="Confirmar" />
