--- a/Source code/proyectoFinal/templates/reservations/deleteAnyReservations.html
+++ b/Source code/proyectoFinal/templates/reservations/deleteAnyReservations.html
@@ -2,15 +2,32 @@
 <html lang="en">
 <head>
 	<meta charset"UTF-8">
-	<title>Canchas</title>
+	<title>Reservaciones</title>
 </head>
 <body>	
 	<h1>Reservaciones Para Eliminar</h1>
-	<ul>
-		{% for complex in complejo %} <!-- users -> Nombre de la lista especificado en views.py -->
-			<li>Complejo :{{complex.name}}</li>
-			{% for reservation in reservations %} <!-- users -> Nombre de la lista especificado en views.py -->
-				
+	{% if complejo%}
+		{% if reservations%}
+			<ul>
+				{% for complex in complejo %} <!-- users -> Nombre de la lista especificado en views.py -->
+					<li>Complejo :{{complex.name}}</li>
+					{% for reservation in reservations %} <!-- users -> Nombre de la lista especificado en views.py -->
+						
+						<li>Hora :{{reservation.hour}}</li>
+						<li>Minuto :{{reservation.minutes}}</li>
+						<li>Usuario :{{reservation.user.get_full_name}}</li>
+						<br>
+						<a href="/cancelreservation/{{reservation.id}}/"><button>Cancelar</button></a>
+						<hr>
+					{% endfor %}	
+				{% endfor %}
+			</ul>
+		{%else%}
+			<p>No hay reservas</p>
+		{%endif%}
+	{%else%}
+		{%if reservations%}
+			{% for reservation in reservations %}
 				<li>Hora :{{reservation.hour}}</li>
 				<li>Minuto :{{reservation.minutes}}</li>
 				<li>Usuario :{{reservation.user.get_full_name}}</li>
@@ -18,8 +35,12 @@
 				<a href="/cancelreservation/{{reservation.id}}/"><button>Cancelar</button></a>
 				<hr>
 			{% endfor %}	
-		{% endfor %}
-	</ul>
+		{%else%}
+			<p>No hay reservas</p>
+		{%endif%}
+	{%endif%}
+
+
 		
 	
 </body>
