--- a/Source code/proyectoFinal/templates/reservations/updateAnyReservations.html
+++ b/Source code/proyectoFinal/templates/reservations/updateAnyReservations.html
@@ -6,11 +6,28 @@
 </head>
 <body>	
 	<h1>Reservaciones Para Actualizar</h1>
-	<ul>
-		{% for complex in complejo %} <!-- users -> Nombre de la lista especificado en views.py -->
-			<li>Complejo :{{complex.name}}</li>
-			{% for reservation in reservations %} <!-- users -> Nombre de la lista especificado en views.py -->
-				<li>Asistió :{{reservation.attended|yesno:"Si,No"}}</li>
+	{% if complejo%}
+		{% if reservations%}
+			<ul>
+				{% for complex in complejo %} <!-- users -> Nombre de la lista especificado en views.py -->
+					<li>Complejo :{{complex.name}}</li>
+					{% for reservation in reservations %} <!-- users -> Nombre de la lista especificado en views.py -->
+						
+						<li>Hora :{{reservation.hour}}</li>
+						<li>Minuto :{{reservation.minutes}}</li>
+						<li>Usuario :{{reservation.user.get_full_name}}</li>
+						<br>
+						<a href="/updatereservation/{{reservation.id}}/"><button>Actualizar</button></a>
+						<hr>
+					{% endfor %}	
+				{% endfor %}
+			</ul>
+		{%else%}
+			<p>No hay reservas</p>
+		{%endif%}
+	{%else%}
+		{%if reservations%}
+			{% for reservation in reservations %}
 				<li>Hora :{{reservation.hour}}</li>
 				<li>Minuto :{{reservation.minutes}}</li>
 				<li>Usuario :{{reservation.user.get_full_name}}</li>
@@ -18,9 +35,10 @@
 				<a href="/updatereservation/{{reservation.id}}/"><button>Actualizar</button></a>
 				<hr>
 			{% endfor %}	
-		{% endfor %}
-	</ul>
-		
+		{%else%}
+			<p>No hay reservas</p>
+		{%endif%}
+	{%endif%}		
 	
 </body>
 </html>
