--- a/Source code/proyectoFinal/templates/complexes/listComplexes.html
+++ b/Source code/proyectoFinal/templates/complexes/listComplexes.html
@@ -6,6 +6,7 @@
 </head>
 <body>	
 	<h1>Complejos Registrados</h1>
+	{% if complexes%}
 	<ul>
 		{% for complex in complexes %} <!-- users -> Nombre de la lista especificado en views.py -->
 			<li><b> Nombre: </b> {{complex.name}} </li>
@@ -16,7 +17,11 @@
 			<li><b> Dueño: </b> {{complex.user.get_full_name}} </li>
 			
 			<a href="/updatecomplexes"><button>Editar</button></a>
+			
 			<br><br>
 		{% endfor %}
 	</ul>
+	{%else%}
+		<p>No se encontraron complejos</p>
+	{%endif%}
 </body>
