--- a/Source code/proyectoFinal/templates/reservations/listReservations.html
+++ b/Source code/proyectoFinal/templates/reservations/listReservations.html
@@ -6,18 +6,21 @@
 </head>
 <body>	
 	<h1>Reservas Agendadas</h1>
-
-	<ul>
-		{% for reservation in reservations %} <!-- reservations -> Nombre de la lista especificado en views.py -->
-			<li><b> Fecha de la Reserva: </b> {{reservation.date}} </li>
-			<li><b> Hora: </b> {{reservation.hour}}:{{reservation.minutes}} </li>
-			<li><b> Realizada por: </b> {{reservation.user.first_name}} {{reservation.user.last_name}} </li>
-			<li><b> Cancha Reservada: </b> {{reservation.court}} </li>
-			<li><b> Asistió?: </b> {{reservation.attended|yesno:"Si,No"}} </li>
-			<br><br>
-		{% endfor %}
-	</ul>
-	<br><br><br><br>
-	<ul>
+	{%if reservations%}
+		<ul>
+			{% for reservation in reservations %} <!-- reservations -> Nombre de la lista especificado en views.py -->
+				<li><b> Fecha de la Reserva: </b> {{reservation.date}} </li>
+				<li><b> Hora: </b> {{reservation.hour}}:{{reservation.minutes}} </li>
+				<li><b> Realizada por: </b> {{reservation.user}}</li>
+				<li><b> Cancha Reservada: </b> {{reservation.court}} </li>
+				<li><b> Asistió?: </b> {{reservation.attended|yesno:"Si,No"}} </li>
+				<br><br>
+			{% endfor %}
+		</ul>
+		<br><br><br><br>
+		<ul>
+	{%else%}
+		<p>No hay reservaciones</p>
+	{%endif%}
 
 </body>
