--- a/Source code/proyectoFinal/templates/teams/updateAnyTeams.html
+++ b/Source code/proyectoFinal/templates/teams/updateAnyTeams.html
@@ -6,13 +6,16 @@
 </head>
 <body>	
 	<h1>Equipos Para Actualizar</h1>
-	
+	{%if teams%}
 		<ul>
 			{% for team in teams %} 
 				<li>Nombre : {{team.name}} | Capitan : {{team.captain}}   <a href="/updateteam/{{team.id}}/"><button>Editar</button></a></li>
 				<br><br>
 			{% endfor %}
 		</ul>
+	{%else%}
+		<p>No hay equipos que actualizar</p>
+	{%endif%}
 
 	
 </body>
