--- a/Source code/proyectoFinal/templates/fixtures/searchFixture.html
+++ b/Source code/proyectoFinal/templates/fixtures/searchFixture.html
@@ -15,14 +15,14 @@
     <link rel="stylesheet" type="text/css" media="all" href="{% static "css/blue.css" %}" />
     <meta charset="UTF-8"/>
     <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
-    <script src="{% static "js/menu.js" %} " type="text/javascript"></script>
+    <script src="{% static "js/menu.js" %} " type="text/javascript"></script>      
   </head>
   <body>  
     <div class="header_bg">
       <div class="container">
         <div class="header">
           <div class="logo">
-            <a href="/"><img src="{% static "images/others/logo.png" %}" alt=""/></a>
+            <a href="/"><img src="{% static "images/others/logo.png" %}" class="img-responsive" alt=""/></a>
           </div>
           <div class="h_menu">
             <a id="touch-menu" class="mobile-menu" href="#">Menu</a>
@@ -149,8 +149,8 @@
           <div class="blog_list">
                   <form action="" method="GET">
                     <div class="form-group">                    
-                    <p for="q">Ingrese la fecha del fixture a buscar: </p>
-                    <input class="form-control" type="date" name="q" value="{{ query|escape }}">
+                    <p for="q">Ingrese el nombre del fixture a buscar: </p>
+                    <input class="form-control" type="text" name="q" value="{{ query|escape }}">
                     </div>
                     <div class="form-group">
                       <button type="submit" class="btn btn-default">Buscar</button>
