--- a/Source code/proyectoFinal/templates/matches/addmatch.html
+++ b/Source code/proyectoFinal/templates/matches/addmatch.html
@@ -16,13 +16,22 @@
     <meta charset="UTF-8"/>
     <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
     <script src="{% static "js/menu.js" %} " type="text/javascript"></script>
+    <link rel="stylesheet" href="{% static "css/jquery-ui.css" %}">
+    <script src="{% static "js/jquery-1.10.2.js" %}"></script>
+    <script src="{% static "js/jquery-ui.js" %}"></script> 
+    <script>
+      $(function() {
+        $( '#datepicker' ).datepicker({minDate:0});
+        $( '#datepicker' ).datepicker('option', 'dateFormat', 'yy-mm-dd');
+      });
+    </script>     
   </head>
   <body>  
     <div class="header_bg">
       <div class="container">
         <div class="header">
           <div class="logo">
-            <a href="/"><img src="{% static "images/others/logo.png" %}" alt=""/></a>
+            <a href="/"><img src="{% static "images/others/logo.png" %}" class="img-responsive" alt=""/></a>
           </div>
           <div class="h_menu">
             <a id="touch-menu" class="mobile-menu" href="#">Menu</a>
