--- a/Source code/proyectoFinal/templates/matches/searchMatch.html
+++ b/Source code/proyectoFinal/templates/matches/searchMatch.html
@@ -16,13 +16,23 @@
     <meta charset="UTF-8"/>
     <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
     <script src="{% static "js/menu.js" %} " type="text/javascript"></script>
+    <link rel="stylesheet" href="{% static "css/jquery-ui.css" %}">
+    <script src="{% static "js/jquery-1.10.2.js" %}"></script>
+    <script src="{% static "js/jquery-ui.js" %}"></script>    
+    <script>
+      $(function() {
+        $( '#datepicker' ).datepicker();
+        $( '#datepicker' ).datepicker('option', 'dateFormat', 'yy-mm-dd');
+        
+      });
+    </script>     
   </head>
   <body>  
     <div class="header_bg">
       <div class="container">
         <div class="header">
           <div class="logo">
-            <a href="/"><img src="{% static "images/others/logo.png" %}" alt=""/></a>
+            <a href="/"><img src="{% static "images/others/logo.png" %}" class="img-responsive" alt=""/></a>
           </div>
           <div class="h_menu">
             <a id="touch-menu" class="mobile-menu" href="#">Menu</a>
@@ -153,7 +163,7 @@
                   <form action="" method="GET">
                     <div class="form-group">                    
                     <p for="q">Buscar: </p>
-                    <input class="form-control" type="date" name="q" value="{{ query|escape }}"> 
+                    <input class="form-control" id="datepicker" name="q" value="{{ query|escape }}"> 
                     </div>
                     <div class="form-group">
                       <button type="submit" class="btn btn-default">Buscar</button>
@@ -165,6 +175,10 @@
                   {% if query %}
                   {% if results %}
                   <div class="row">
+                                            <div class="alert alert-info alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            * Los resultados son (Local-Visitante)
+                          </div>
                      <div class="table-responsive">
                       <table class="table table-bordered">
                         <tr>
@@ -192,10 +206,6 @@
                           </tr>
                           {% endfor %}
                           </table>
-                          <div class="alert alert-info alert-dismissible" role="alert">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            * Los resultados son (Local-Visitante)
-                          </div>
                           
                           </div>
                           </div>
