--- a/Source code/proyectoFinal/templates/playersinfo/playersinfo_update_form.html
+++ b/Source code/proyectoFinal/templates/playersinfo/playersinfo_update_form.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="header">
           <div class="logo">
-            <a href="/"><img src="{% static "images/others/logo.png" %}" alt=""/></a>
+            <a href="/"><img src="{% static "images/others/logo.png" %}" class="img-responsive" alt=""/></a>
           </div>
           <div class="h_menu">
             <a id="touch-menu" class="mobile-menu" href="#">Menu</a>
@@ -157,7 +157,7 @@
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         	<span aria-hidden="true">&times;</span>
         </button>
-       	Actualizacion del jugador <b>{{playersinfo.user}}</b> en el torneo <b>{{playersinfo.tournament.name}}</b>
+       	Actualizacion del jugador <b>{{playersinfo.user.firstname}} {{playersinfo.user.lastname}}</b> en el torneo <b>{{playersinfo.tournament.name}}</b>
     </div>  
     <div class="form-group">
     {{ form.as_p }}
