--- a/Source code/proyectoFinal/templates/tournaments/teamsinscriptions.html
+++ b/Source code/proyectoFinal/templates/tournaments/teamsinscriptions.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="header">
           <div class="logo">
-            <a href="/"><img src="{% static "images/others/logo.png" %}" alt=""/></a>
+            <a href="/"><img src="{% static "images/others/logo.png" %}" class="img-responsive" alt=""/></a>
           </div>
           <div class="h_menu">
             <a id="touch-menu" class="mobile-menu" href="#">Menu</a>
@@ -198,7 +198,7 @@
               <li><a href="#"><img src="{% static "images/others/ads_pic.jpg"%}" alt=""></a></li>
               {%endif%}
              {%if publish_third%}
-              <li><a href="#"><img src="{{MEDIA_URL}}{{publish_second.img}}" alt=""> </a></li>         
+              <li><a href="#"><img src="{{MEDIA_URL}}{{publish_third.img}}" alt=""> </a></li>         
              {%else%}
               <li><a href="#"><img src="{% static "images/others/ads_pic.jpg"%}" alt=""></a></li>
               {%endif%}
